--- a/packages/hexagon-core/package.json
+++ b/packages/hexagon-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nedvisol/hexagon-core",
   "version": "0.1.0",
-  "description": "> TODO: description",
+  "description": "Typescript decorators for building portable NodeJS micro/nano-services",
   "author": "Ned Visolyaputra <0_ratios.mutes@icloud.com>",
   "homepage": "https://github.com/nedvisol/hexagon#readme",
   "license": "MIT",
